# -Client-server-from-desktop-vs-code

./: .gitignore  All_code_Snippets_and_files_that_are_given_with_this_project.md  Client-Server insructions.md  ENHANCEMENTS.md  IMPLEMENTATION_CONTEXT.md  PROJECT_CLEANUP_PLAN.md  PROJECT_CLEANUP_SUMMARY.md  README.md  create_test_file.py  create_test_files.bat  detect_environment.bat  last_used_context.md  requirements.txt  run_tests.bat  start_enhanced_server.bat  start_server.bat  test_cksum.py  test_client.bat  test_enhanced_features.bat  test_file.txt  test_server.py  test_server_connection.py  test_tcp_client.py
.github/: copilot-instructions.md
client/: AESWrapper.cpp  AESWrapper.h  Base64Wrapper.cpp  Base64Wrapper.h  CMakeLists.txt  README.md  RSAWrapper.cpp  RSAWrapper.h  build_cmake.bat  build_http_client.bat  build_mingw.bat  build_mingw_tcp.bat  build_msvc.bat  build_simple.bat  build_tcp_auto.bat  build_tcp_client.bat  build_vs2022.bat  cksum.cpp  cksum.h  clean.bat  client.cpp  enhanced_client.py  main.cpp  python_client.py  simple_build.bat  simple_test.cpp  tcp_client.cpp  tcp_client.h  tcp_client_file_ops.cpp  test_file.txt  test_wrappers.cpp  transfer.info
server/: README.md  enhanced_server.py  server.py  tcp_server.py
tests/integration/: test_client_server.py
tests/scripts/: run_all_tests.bat
tests/unit/: test_aes_wrapper.cpp  test_cksum.cpp  test_rsa_wrapper.cpp
